# neural_net

./: .gitignore  CMakeLists.txt  Readme.md
docu/: 0_neural_net.tex  1_neural_net_definitions.tex  2_neural_net_computations.tex  texclean
input/: 2x1_linear_classify.cfg  2x1_linear_classify_target_data.csv  2x1_linear_classify_test.csv  2x1_linear_classify_train.csv  2x1_linear_classify_training_data.csv  2x2x1_example.cfg  2x2x1_example_target_data.csv  2x2x1_example_train.csv  2x2x1_example_training_data.csv  2x2x1_xor.cfg  2x2x1_xor_test.csv  example.cfg  iris.cfg  iris.csv  iris_full_data_MNIST-format.csv  iris_test.csv  iris_train.csv  iris_validate.cfg  iris_validate.csv  linear_classify.cfg  mnist.cfg  mnist_train.cfg  mnist_validate.cfg  xor.cfg  xor_train.csv
src/: activation_func.cpp  activation_func.hpp  file_io.cpp  file_io.hpp  main.cpp  neural_net.cpp  neural_net.hpp  neural_net_file_io.cpp  neural_net_file_io.hpp  neural_net_func.cpp  neural_net_func.hpp  neural_net_print.cpp  neural_net_print.hpp
tests_python/: python_keras_test.ipynb  simple_nn_learn.py  simple_nn_learn_fixed_start.py  simple_nn_one_step.py
